fix: fixing description overflow on details page

--- a/src/app/components/details/details.component.scss
+++ b/src/app/components/details/details.component.scss
@@ -42,6 +42,7 @@ p {
 }
 .description-container {
   max-width: 70%;
+  overflow-wrap: break-word;
 }
 .todo-details-info {
   display: flex;
